adding frontend from fastapi

--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,13 +1,21 @@
 {
   "imports": {
     "@std/path": "jsr:@std/path@^1.0.8",
+    "@types/express-list-endpoints": "npm:@types/express-list-endpoints@^6.0.3",
+    "@types/morgan": "npm:@types/morgan@^1.9.9",
+    "@types/multer": "npm:@types/multer@^1.4.12",
+    "@vinejs/vine": "npm:@vinejs/vine@^3.0.0",
+    "chalk": "npm:chalk@^5.3.0",
     "cors": "npm:cors@^2.8.5",
     "express": "npm:express@5.0.1",
+    "express-list-endpoints": "npm:express-list-endpoints@^7.1.1",
     "jsonwebtoken": "npm:jsonwebtoken@^9.0.2",
     "bcrypt": "https://deno.land/x/bcrypt@v0.3.0/mod.ts",
     "knex": "npm:knex@^3.1.0",
     "kysely": "npm:kysely@^0.27.4",
     "kysely-ctl": "npm:kysely-ctl@^0.9.0",
+    "morgan": "npm:morgan@^1.10.0",
+    "multer": "npm:multer@^1.4.5-lts.1",
     "pg": "npm:pg@^8.13.1",
     "pg-pool": "npm:pg-pool@^3.7.0",
     "database/": "./database/",
