--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -9,15 +9,18 @@ RUN npm install
 
 COPY ./ /app/
 
+COPY ./entrypoint.sh /app/
+RUN chmod +x /app/entrypoint.sh
+
 ARG VITE_API_URL=${VITE_API_URL}
 
-RUN npm run build
-
-
-# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
-FROM nginx:1
-
-COPY --from=build-stage /app/dist/ /usr/share/nginx/html
-
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-COPY ./nginx-backend-not-found.conf /etc/nginx/extra-conf.d/backend-not-found.conf
+ENTRYPOINT ["/app/entrypoint.sh"]
+#
+#
+# # Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
+# FROM nginx:1
+#
+# COPY --from=build-stage /app/dist/ /usr/share/nginx/html
+#
+# COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+# COPY ./nginx-backend-not-found.conf /etc/nginx/extra-conf.d/backend-not-found.conf
