--- a/backend/deno.json
+++ b/backend/deno.json
@@ -4,7 +4,6 @@
     "@types/express-list-endpoints": "npm:@types/express-list-endpoints@^6.0.3",
     "@types/morgan": "npm:@types/morgan@^1.9.9",
     "@types/multer": "npm:@types/multer@^1.4.12",
-    "@vinejs/vine": "npm:@vinejs/vine@^3.0.0",
     "chalk": "npm:chalk@^5.3.0",
     "cors": "npm:cors@^2.8.5",
     "express": "npm:express@5.0.1",
@@ -25,7 +24,9 @@
     "services/": "./src/services/",
     "db": "./kysely.config.ts",
     "db/types": "./database/types/mod.ts",
-    "app/types": "./src/types/mod.ts"
+    "app/types": "./src/types/mod.ts",
+    "zod": "npm:zod@^3.23.8",
+    "zod-express-middleware": "npm:zod-express-middleware@^1.4.0"
   },
    "fmt": {
       "useTabs": false,
@@ -33,7 +34,7 @@
       "semiColons": true,
       "singleQuote": true,
       "proseWrap": "preserve",
-      "include": ["./app/","./database/","./public/","*.ts"],
+      "include": ["./src/","./database/","./public/","*.ts"],
       "exclude": ["src/static"]
    },
    "tasks": {
