--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - ENV=development
     develop:
       watch: 
-        - path: ./backend/app
+        - path: ./backend/src
           target: /app/src
           action: sync
         - path: ./backend/public
@@ -79,7 +79,7 @@ services:
       - VITE_API_URL=http://localhost:3000
       - NODE_ENV=development
     ports:
-      - "5173:80"
+      - "5173:5173"
     develop:
       watch: 
         - path: ./frontend/public
@@ -91,11 +91,9 @@ services:
         - path: ./frontend/tests
           target: /app/tests
           action: sync+restart
-        - path: ./frontend/package.json
-          target: /app/package.json
+        - path: ./frontend/*.json
+          target: /app/*.json
           action: sync+restart
-    depends_on:
-      - backend
 
 
 configs:
