adding deno fmt --check

--- a/backend/deno.json
+++ b/backend/deno.json
@@ -1,44 +1,44 @@
 {
-  "imports": {
-    "@std/path": "jsr:@std/path@^1.0.8",
-    "@types/morgan": "npm:@types/morgan@^1.9.9",
-    "@types/multer": "npm:@types/multer@^1.4.12",
-    "chalk": "npm:chalk@^5.3.0",
-    "cors": "npm:cors@^2.8.5",
-    "express": "npm:express@5.0.1",
-    "jsonwebtoken": "npm:jsonwebtoken@^9.0.2",
-    "bcrypt": "https://deno.land/x/bcrypt@v0.3.0/mod.ts",
-    "kysely": "npm:kysely@^0.27.4",
-    "kysely-ctl": "npm:kysely-ctl@^0.9.0",
-    "morgan": "npm:morgan@^1.10.0",
-    "multer": "npm:multer@^1.4.5-lts.1",
-    "pg": "npm:pg@^8.13.1",
-    "database/": "./database/",
-    "routes/": "./src/routes/",
-    "middlewares/": "./src/middlewares/",
-    "models/": "./src/models/",
-    "controllers/": "./src/controllers/",
-    "services/": "./src/services/",
-    "db": "./kysely.config.ts",
-    "db/types": "./database/types/mod.ts",
-    "app/types": "./src/types/mod.ts",
-    "zod": "npm:zod@^3.23.8",
-    "zod-express-middleware": "npm:zod-express-middleware@^1.4.0"
-  },
+   "imports": {
+      "@std/path": "jsr:@std/path@^1.0.8",
+      "@types/morgan": "npm:@types/morgan@^1.9.9",
+      "@types/multer": "npm:@types/multer@^1.4.12",
+      "chalk": "npm:chalk@^5.3.0",
+      "cors": "npm:cors@^2.8.5",
+      "express": "npm:express@5.0.1",
+      "jsonwebtoken": "npm:jsonwebtoken@^9.0.2",
+      "bcrypt": "https://deno.land/x/bcrypt@v0.3.0/mod.ts",
+      "kysely": "npm:kysely@^0.27.4",
+      "kysely-ctl": "npm:kysely-ctl@^0.9.0",
+      "morgan": "npm:morgan@^1.10.0",
+      "multer": "npm:multer@^1.4.5-lts.1",
+      "pg": "npm:pg@^8.13.1",
+      "database/": "./database/",
+      "routes/": "./src/routes/",
+      "middlewares/": "./src/middlewares/",
+      "models/": "./src/models/",
+      "controllers/": "./src/controllers/",
+      "services/": "./src/services/",
+      "db": "./kysely.config.ts",
+      "db/types": "./database/types/mod.ts",
+      "app/types": "./src/types/mod.ts",
+      "zod": "npm:zod@^3.23.8",
+      "zod-express-middleware": "npm:zod-express-middleware@^1.4.0"
+   },
    "fmt": {
       "useTabs": false,
       "indentWidth": 3,
       "semiColons": true,
       "singleQuote": true,
       "proseWrap": "preserve",
-      "include": ["./src/","./database/","./public/","*.ts"],
+      "include": ["./src/", "./database/", "./public/", "*.ts"],
       "exclude": ["src/static"]
    },
    "tasks": {
       "dev": "deno -A --watch src/main.ts",
-      "migrate:latest":"deno -A npm:kysely-ctl migrate:latest"
-      "migrate:make":"deno -A --env-file npm:kysely-ctl migrate:make "
-      "format": "deno fmt --watch src",
-    },
+      "migrate:latest": "deno -A npm:kysely-ctl migrate:latest",
+      "migrate:make": "deno -A --env-file npm:kysely-ctl migrate:make ",
+      "format": "deno fmt --watch src"
+   },
    "nodeModulesDir": "auto"
 }
