--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -33,4 +33,4 @@ jobs:
 
       # Uncomment this step to verify the use of 'deno fmt' on each commit.
       - name: Verify formatting
-        run: deno fmt --check
+        run: deno fmt ./backend --check
