-replacing adminer with drizzle studio -replacing kysely with drizzle

--- a/backend/deno.json
+++ b/backend/deno.json
@@ -5,25 +5,28 @@
       "@types/multer": "npm:@types/multer@^1.4.12",
       "chalk": "npm:chalk@^5.3.0",
       "cors": "npm:cors@^2.8.5",
+      "drizzle-kit": "npm:drizzle-kit@^0.30.1",
+      "drizzle-orm": "npm:drizzle-orm@^0.38.2",
+      "drizzle-seed": "npm:drizzle-seed@^0.1.3",
+      "drizzle-zod": "npm:drizzle-zod@^0.6.0",
       "express": "npm:express@5.0.1",
       "jsonwebtoken": "npm:jsonwebtoken@^9.0.2",
       "bcrypt": "https://deno.land/x/bcrypt@v0.3.0/mod.ts",
-      "kysely": "npm:kysely@^0.27.4",
-      "kysely-ctl": "npm:kysely-ctl@^0.9.0",
       "morgan": "npm:morgan@^1.10.0",
       "multer": "npm:multer@^1.4.5-lts.1",
       "pg": "npm:pg@^8.13.1",
+      "zod": "npm:zod@^3.23.8",
+      "zod-express-middleware": "npm:zod-express-middleware@^1.4.0",
+      "config/": "./config/",
       "database/": "./database/",
       "routes/": "./src/routes/",
       "middlewares/": "./src/middlewares/",
       "models/": "./src/models/",
       "controllers/": "./src/controllers/",
       "services/": "./src/services/",
-      "db": "./kysely.config.ts",
-      "db/types": "./database/types/mod.ts",
+      "db": "./database/mod.ts",
+      "db/types": "./database/schema.ts",
       "app/types": "./src/types/mod.ts",
-      "zod": "npm:zod@^3.23.8",
-      "zod-express-middleware": "npm:zod-express-middleware@^1.4.0"
    },
    "fmt": {
       "useTabs": false,
@@ -36,8 +39,11 @@
    },
    "tasks": {
       "dev": "deno -A --watch src/main.ts",
-      "migrate:latest": "deno -A npm:kysely-ctl migrate:latest",
-      "migrate:make": "deno -A --env-file npm:kysely-ctl migrate:make ",
+      "db:migrate": "deno run --env-file=../.env -A npm:drizzle-kit migrate --config=./config/drizzle.config.ts",
+      "db:migrate:generate": "deno run --env-file=../.env -A npm:drizzle-kit generate --config=./config/drizzle.config.ts --name ",
+      "db:migrate:push": "deno run -A npm:drizzle-kit push --config=./config/drizzle.config.ts --force",
+      "db:seed": "deno run --env-file=../.env -A",
+      "db:studio": "deno run --env-file=../.env -A npm:drizzle-kit studio --config=./config/drizzle.config.ts",
       "format": "deno fmt --watch src"
    },
    "nodeModulesDir": "auto"
