--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,27 +11,7 @@ services:
       timeout: 5s
       retries: 5
 
-  # adminer:
-  #   image: adminer
-  #   restart: always
-  #   env_file:
-  #     - .env
-  #   depends_on:
-  #     - db
-  #   environment:
-  #     - ADMINER_DESIGN=${ADMINER_DESIGN}
-  #     - ADMINER_DEFAULT_DRIVER=pgsql
-  #     - ADMINER_DEFAULT_DB=${POSTGRES_DB} 
-  #     - ADMINER_DEFAULT_SERVER=${POSTGRES_SERVER}
-  #     - ADMINER_DEFAULT_USERNAME=${POSTGRES_USER}
-  #     - ADMINER_DEFAULT_PASSWORD=${POSTGRES_PASSWORD}
-  #   ports:
-  #     - "8080:8080"
-  #   configs:
-  #     - source: adminer-index.php
-  #       target: /var/www/html/index.php
-
-  backend: &backend
+  backend:
     build:
       context: ./backend
       dockerfile: dockerfile
@@ -62,7 +42,7 @@ services:
           action: rebuild
     depends_on:
       db:
-        condition: service_healthy
+         condition: service_healthy
     entrypoint: ["/app/entrypoint.sh"]
     ports:
       - "3000:3000"
@@ -104,20 +84,3 @@ services:
         - path: ./frontend/*.json
           target: /app/*.json
           action: sync+restart
-
-
-# configs:
-#   adminer-index.php:
-#     content: |
-#       <?php
-#         if(!count($$_GET)) {
-#           $$_POST['auth'] = [
-#             'driver' => $$_ENV['ADMINER_DEFAULT_DRIVER'],
-#             'server' => $$_ENV['ADMINER_DEFAULT_SERVER'],
-#             'username' => $$_ENV['ADMINER_DEFAULT_USERNAME'],
-#             'password' => $$_ENV['ADMINER_DEFAULT_PASSWORD'],
-#             'db'    => $$_ENV['ADMINER_DEFAULT_DB'],
-#           ];
-#         }
-#         include './adminer.php';
-#       ?>
